// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply build types from dependency config 1`] = `
Object {
  "name": "react-native-test",
  "platforms": Object {
    "android": null,
    "ios": Object {
      "configurations": Array [
        "debug",
      ],
      "podspecPath": "<<REPLACED>>/node_modules/react-native-test/ReactNativeTest.podspec",
      "scriptPhases": Array [],
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should have a valid structure by default 1`] = `
Object {
  "commands": Array [],
  "dependencies": Object {},
  "healthChecks": Array [],
  "platforms": Object {},
  "project": Object {},
  "reactNativePath": "<<REPLACED>>",
  "root": "<<REPLACED>>",
}
`;

exports[`should load commands from "react-native-foo" and "react-native-bar" packages 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "foo-command",
  },
  Object {
    "func": [Function],
    "name": "bar-command",
  },
]
`;

exports[`should merge project configuration with default values: snapshoting \`react-native-test\` config 1`] = `
Object {
  "name": "react-native-test",
  "platforms": Object {
    "android": null,
    "ios": Object {
      "configurations": Array [],
      "podspecPath": "<<REPLACED>>/node_modules/react-native-test/ReactNativeTest.podspec",
      "scriptPhases": Array [
        Object {
          "name": "abc",
          "path": "./phase.sh",
        },
      ],
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should read a config of a dependency and use it to load other settings 1`] = `
Object {
  "name": "react-native-test",
  "platforms": Object {
    "android": null,
    "ios": Object {
      "configurations": Array [],
      "podspecPath": "<<REPLACED>>/node_modules/react-native-test/ReactNativeTest.podspec",
      "scriptPhases": Array [
        Object {
          "dependency_file": "/path/to/dependency/file",
          "execution_position": "after_compile",
          "input_file_lists": Array [
            "input_file_1",
            "input_file_2",
          ],
          "input_files": Array [
            "input_file",
          ],
          "name": "[TEST] Some Configuration",
          "output_file_lists": Array [
            "output_file_1",
            "output_file_2",
          ],
          "output_files": Array [
            "output_file",
          ],
          "path": "./customLocation/custom.sh",
          "shell_path": "some/shell/path/bash",
          "show_env_vars_in_log": false,
        },
      ],
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should return dependencies from package.json 1`] = `
Object {
  "react-native": Object {
    "name": "react-native",
    "platforms": Object {
      "android": null,
      "ios": null,
    },
    "root": "<<REPLACED>>/node_modules/react-native",
  },
  "react-native-test": Object {
    "name": "react-native-test",
    "platforms": Object {
      "android": null,
      "ios": Object {
        "configurations": Array [],
        "podspecPath": "<<REPLACED>>/node_modules/react-native-test/ReactNativeTest.podspec",
        "scriptPhases": Array [],
      },
    },
    "root": "<<REPLACED>>/node_modules/react-native-test",
  },
}
`;

exports[`should skip packages that have invalid configuration: dependencies config 1`] = `Object {}`;

exports[`should skip packages that have invalid configuration: logged warning 1`] = `"warn Package react-native has been ignored because it contains invalid configuration. Reason: \\"dependency.invalidProperty\\" is not allowed"`;

exports[`supports dependencies from user configuration with custom build type 1`] = `
Object {
  "name": "react-native-test",
  "platforms": Object {
    "android": null,
    "ios": Object {
      "configurations": Array [
        "custom_build_type",
      ],
      "podspecPath": "<<REPLACED>>/node_modules/react-native-test/ReactNativeTest.podspec",
      "scriptPhases": Array [],
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`supports disabling dependency for ios platform 1`] = `
Object {
  "name": "react-native-test",
  "platforms": Object {
    "android": null,
    "ios": null,
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;
